assets/css/rtl-pdf.css
div
{ 
    direction: rtl !important;
} 
body
{ 
    direction: rtl !important; 
    unicode-bidi: embed;
}
.doc_page{
    direction: rtl !important; 
    unicode-bidi: embed;
}
.document_id
{ 
    margin-right: 5px;   
}

.signatures 
{
    position: relative ;
    display : block ; 
    width:100% ;
    font-family: 'Open Sans', sans-serif,chinese-msyh;
    margin-top:50px;
   
}

.signature-left 
{
    display:inline-block ; 
    float:right ;
    text-align:right ;
    max-height: 100px;
    width:50% ; 
    font-family: 'Open Sans', sans-serif,chinese-msyh;
}


.signed_on 
{ 
    margin-right: 5px;    
}



.footer-left
{ 
    float: right; 
    text-align: right;
}
.footer-right
{ 
    float: left; 
    text-align: left;
}
.doc_title{
   
    text-align: right ;
    font-size: 26px ;
    font-weight: 200;
    
}

.document-info .left
{ 
    float: right ; 
    text-align: right ;  
}

.document-info .right
{ 
    float: left; 
    text-align: left;  
}

#audit-trail-wrapper .document-info .left
{ 
    float: right; 
    text-align: right;  
}
#audit-trail-wrapper .main .signer-view .info .left
{
    float:right ; 
}
#audit-trail-wrapper .main .user
{
    padding: -15px 2px;
}
#audit-trail-wrapper .main .signer-view .checksum .checksum-caption
{
    float: right ;
	text-align: left;
}

.audit-pdf-bottom-footer .audit-pdf-site-url
{
    text-align: left;
    padding: 0;
}
.rtl-signer-id{
	padding-right: 30px;
}


.footer-left 
{
      position : relative ;
      display : block ;
      float:right ;
      width:20% ;
     
}

.footer-right 
{
      position : relative ;
      display : block ;
      float:left;
      width:80% ; 
      text-align:left ; 
}


#main-signature .form-inline div {
    float: right;
}
.signer-view .info{
    padding-bottom: 30px;
}

#audit-trail-wrapper .header .row .left {
    display: inline-block;
    float:left;
    width:75%;
    margin-left: 160px ;
    
}
#audit-trail-wrapper .header .row  .right {
    display: inline-block;
    float:right;
    width:20%;
    text-align: center;
    font-size:10px;
    font-weight: normal;
    margin-right: 500px ;
    margin-top: -70px ;
   
}

